[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchesjob-reserver"
version = "0.1.0"
description = "Reservation and dispatch agent for orchesjob"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ryosuke Muraki" }
]
keywords = [
  "orchesjob",
  "airflow",
  "job",
  "reservation",
  "dispatcher",
  "edge"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Systems Administration"
]
dependencies = []

[project.scripts]
orchesjob-reserver = "orchesjob_reserver.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "twine>=5.0.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchesjob_reserver*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
